--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
         circle.style.width = radius + "px"; 
         circle.style.height = radius + "px";
 				parent.appendChild(circle);
-        circle.style.left = X - (radius/2) + p;
-        circle.style.top  = Y - (radius/2) + p;
+        circle.style.left = X + p;
+        circle.style.top  = Y + p;
 			}
 		
 			function move(evt) {
