--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			}			
 
 			.circle.opacityT {
-				animation: mymove 1s;
+				animation: mymove 2s;
 				animation-fill-mode: forwards;
 		  }
  
@@ -33,6 +33,8 @@
 					80%   {opacity: 0.2;
 					visibility: visible;}
 					100% {opacity: 0;
+					width: 1px;
+					height: 1px;
 					visibility: hidden;}
 			}
     </style>
