--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			
 			socket.on('connecting', function(playerID) {
 				
-				document.body.innerHTML = "<div id='my' ontouchmove='move(event);' style='width: " + radius + p + "; height: " +  radius + p + "; background-color: " + color + "'></div>";
+				document.body.innerHTML = "<div id='my' ontouchmove='move_object(event);' style='width: " + (radius + 100) + p + "; height: " +  (radius + 100) + p + "; background-color: " + color + "'></div>";
 				var cir = document.getElementById('my');
 				//cir.addEventListener("ontouchmove", moveTouch);
 				cir.style.left = getRandomInt(0, window.innerWidth) - (radius/2) + p;
@@ -232,16 +232,16 @@
 			
 			 function move_object(event) {
     // Подавить событие
-    event.preventDefault();
-    var left=event.touches[0].pageX;
-    var top=event.touches[0].pageY;
-    // Переместить элемент
-    var el=document.getElementById('floating');
-    el.style.top=top+'px';
-    el.style.left=left+'px';
+				event.preventDefault();
+				var left=event.touches[0].pageX;
+				var top=event.touches[0].pageY;
+				// Переместить элемент
+				var el=document.getElementById('my');
+				el.style.top=top+'px';
+				el.style.left=left+'px';
 } 
 			
-			function move(evt) {
+			function movee(evt) {
 				//console.log(evt.x + " " + evt.y)
 				socket.emit('player moved', evt.x - (radius/2), evt.y - (radius/2));
 			
