--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			
 			socket.on('connecting', function(playerID) {
 				
-				document.body.innerHTML = "<div id='my' ontouchmove='move_object(event);' style='width: " + (radius + 100) + p + "; height: " +  (radius + 100) + p + "; background-color: " + color + "'></div>";
+				document.body.innerHTML = "<div id='my' ontouchmove='move_object(event);' style='width: " + radius + p + "; height: " +  radius + p + "; background-color: " + color + "'></div>";
 				var cir = document.getElementById('my');
 				//cir.addEventListener("ontouchmove", moveTouch);
 				cir.style.left = getRandomInt(0, window.innerWidth) - (radius/2) + p;
@@ -226,9 +226,6 @@
 				});
 			}
 		
-			function moveTouch(evt) {
-				socket.emit('player moved', evt.touch[0].pageX - (radius/2), evt.touch[0].pageY - (radius/2));
-			}
 			
 			 function move_object(event) {
     // Подавить событие
@@ -238,12 +235,12 @@
 				// Переместить элемент				
 				
 				var el=document.getElementById('my');
-				el.style.top=top+'px';
-				el.style.left=left+'px';
+				el.style.top=top - (radius/2) + 'px';
+				el.style.left=left - (radius/2) + 'px';
 				socket.emit('player moved', evt.x - (radius/2), evt.y - (radius/2));
 } 
 			
-			function movee(evt) {
+			function move(evt) {
 				//console.log(evt.x + " " + evt.y)
 				socket.emit('player moved', evt.x - (radius/2), evt.y - (radius/2));
 			
