--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 			}
     </style>
 </head> 
-  <body onmousemove="move(event)" ontouchmove="move_object(event);">
-    <div id="floating" ontouchmove="move_object(event);" style="width: 200px; height: 200px;">Drag me</div>
+  <body ontouchmove="move_object(event);">
     <script >
 			var socket = io();
 
